# Specula

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  PACKAGING.md  PKGBUILD  README.md  meson.build  meson_options.txt  specula.install
data/: io.github.petexy.Specula.desktop  io.github.petexy.Specula.metainfo.xml  meson.build
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  hi.po  meson.build  pl.po  pt_BR.po  ru.po  specula.pot  zh_CN.po
src/: adb.c  adb.h  audio.c  audio.h  decoder.c  decoder.h  device.c  device.h  discovery.c  discovery.h  failsafe.c  failsafe.h  input.c  input.h  main.c  meson.build  net.c  net.h  pinstore.c  pinstore.h  pm-application.c  pm-application.h  pm-connect-dialog.c  pm-connect-dialog.h  pm-session.c  pm-session.h  pm-settings-dialog.c  pm-settings-dialog.h  pm-types.h  pm-video-view.c  pm-video-view.h  pm-window.c  pm-window.h  prefs.c  prefs.h  protocol.c  protocol.h
